utils/mercutio_codegen/tests/examples/fail.rs
use mercutio::*;

#[derive(CSS, Debug)]
#[font_family = "sans-serif"]
#[font_size = "24px"]
pub struct TitleStyles;

fn main() {

}
